fix: collapse multiselect legend selector, use available space for filter inputs
fix: use available space for filter inputs

--- a/src/components/dimension-modal/conditions-modal-content/styles/condition.module.css
+++ b/src/components/dimension-modal/conditions-modal-content/styles/condition.module.css
@@ -5,6 +5,11 @@
     overflow: hidden;
 }
 
+.container:has(.textInput, .phoneNumberInput, .letterInput, .legendSelect) {
+    display: flex;
+    inline-size: 100%;
+}
+
 .container:not(.checkboxContainer):hover {
     box-shadow:
         0 1px 5px rgba(12, 12, 12, 0.05),
@@ -41,7 +46,8 @@
 
 .legendSelect,
 .textInput {
-    flex: 2 1 auto;
+    flex: 1 1 0;
+    min-inline-size: 0;
 }
 
 .textInput :global(input) {
@@ -78,6 +84,7 @@
 }
 
 .phoneNumberInput {
+    flex: 1 1 0;
     min-inline-size: 200px;
 }
 
@@ -86,6 +93,7 @@
 }
 
 .letterInput {
+    flex: 1 1 0;
     min-inline-size: 100px;
 }
 
